# engine

./: .gitignore  CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: app.cpp  app.hpp  camera.hpp  light.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  stb_image_loader.cpp  texture2D.hpp
src/shaders/: fragment.glsl  light_fragment.glsl  linear_depth.frag.glsl  model_fragment.glsl  model_outline.vert.glsl  model_vertex.glsl  non_linear_depth.frag.glsl  normal.frag.glsl  outline_models.frag.glsl  vertex.glsl
